// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectCaret renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <svg
      class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-pointer pointer-events"
      style="min-width: 16px; min-height: 16px;"
      viewBox="0 0 16 16"
    >
      <path
        d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
      />
    </svg>
  </div>
</div>
`;

exports[`SelectCaret renders disabled 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <svg
      class="PicassoSvgDropdownArrows16-root absolute top-[calc(50%-0.5rem)] right-[0.3125rem] text-graphite text-[1rem] cursor-pointer pointer-events text-graphite z-[1]"
      style="min-width: 16px; min-height: 16px;"
      viewBox="0 0 16 16"
    >
      <path
        d="m10.997 10.29.707.707-3.707 3.707-3.707-3.707.707-.707 3 3 3-3Zm-3-9 3.707 3.707-.707.707-3-3-3 3-.707-.707 3-3 .707-.707Z"
      />
    </svg>
  </div>
</div>
`;
